--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">        
     <title>Summit High Country</title>
+
     <script src="http://maps.googleapis.com/maps/api/js"></script>
     <base href="http://maps.gstatic.com/mapfiles/openhand_8_8.cur" target="_parent" >
 </head>
@@ -13,26 +14,24 @@
 <body>
 
     <header> 
-        <form action="#"> 
-            <input placeholder="Search…" type="search" name="q" data-bind="value: query, valueUpdate: 'keyup'" autocomplete="off"> 
-        </form> 
+        <span>
+            <input class="search" type="search" placeholder="Search/Filter..." data-bind="value: query, valueUpdate: 'afterkeydown'">
+        </span>
     </header>
 
     <div style="width: 100%">
         <div id="map" style= "position: absolute; float: left; width: 70%; height: 100%"></div>
-        <div id="points-list-div" style= "float: right; width: 30%; height: 100%">
-            <ul style="list-style-type: none; padding:15px; margin:0px" data-bind= "template: { name: 'pointsTmpl', foreach: points }"></ul>
+        <div style= "float: right; width: 30%; height: 100%">
+            <ul style="list-style-type: none; padding-left:15px; margin:0px" data-bind= "foreach: listArray">
+                <li data-bind="text: name">
+                </li>
+            </ul>
         </div>
     </div>
-        <script id="pointsTmpl" type="text/html">
-            <li>
-                <span data-bind="text: name"></span>
-            </li>
-        </script>
-        <script type='text/javascript' src='file:///C:/Users/Ken/Desktop/Portfolio/Project5/js/jquery-2.1.3.min.js'></script>
-        <script type='text/javascript' src='file:///C:/Users/Ken/Desktop/Portfolio/Project5/js/knockout-3.3.0.js'></script>
-        <script type='text/javascript' src='file:///C:/Users/Ken/Desktop/Portfolio/Project5/js/ViewModel.js'></script>
 
+    <script type='text/javascript' src='file:///C:/Users/Ken/Desktop/Portfolio/Project5/js/jquery-2.1.3.min.js'></script>
+    <script type='text/javascript' src='file:///C:/Users/Ken/Desktop/Portfolio/Project5/js/knockout-3.3.0.js'></script>
+    <script type='text/javascript' src='file:///C:/Users/Ken/Desktop/Portfolio/Project5/js/ViewModel.js'></script>    
 </body>
 
 </html>
