--- a/index.html
+++ b/index.html
@@ -7,31 +7,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">        
     <title>Summit High Country</title>
 
-    <script src="http://maps.googleapis.com/maps/api/js"></script>
+    <script aynch src="http://maps.googleapis.com/maps/api/js"></script>
     <base href="http://maps.gstatic.com/mapfiles/openhand_8_8.cur" target="_parent" >
 </head>
 
 <body>
 
     <header> 
-        <span>
-            <input class="search" type="search" placeholder="Search/Filter..." data-bind="value: query, valueUpdate: 'afterkeydown'">
-        </span>
+        <h2 style="color:blue; text-align: center">Rocky Mountain High</h2>
+        <div>
+            <span>
+                <input class="search" type="search" placeholder="Search/Filter..." data-bind="value: query, valueUpdate: 'afterkeydown'">
+            </span>
+            <span>
+                <button><img src="C:/Users/Ken/Desktop/Portfolio/Project5/icons/ski.svg" alt="Ski Resorts" onclick = "filterActivity('ski')"></button> 
+            </span>
+            <span>
+                <button><img src="C:/Users/Ken/Desktop/Portfolio/Project5/icons/bar.svg" alt="Taverns" onclick = "filterActivity('bar')"></button> 
+            </span>
+            <span>
+                <button><img src="C:/Users/Ken/Desktop/Portfolio/Project5/icons/dispensary.svg" alt="Cannabis Dispensaries" onclick = "filterActivity('dispensary')"></button> 
+            </span>
+        </div>
     </header>
 
     <div style="width: 100%">
         <div id="map" style= "position: absolute; float: left; width: 70%; height: 100%"></div>
         <div style= "float: right; width: 30%; height: 100%">
             <ul style="list-style-type: none; padding-left:15px; margin:0px" data-bind= "foreach: listArray">
-                <li data-bind="text: name">
+                <li data-bind="text: title, click: selectItem, css: {'selected': highlight()}">
                 </li>
             </ul>
         </div>
+        <div id="snow report">
+            <p id="test"></p>
+        </div>
     </div>
 
-    <script type='text/javascript' src='file:///C:/Users/Ken/Desktop/Portfolio/Project5/js/jquery-2.1.3.min.js'></script>
-    <script type='text/javascript' src='file:///C:/Users/Ken/Desktop/Portfolio/Project5/js/knockout-3.3.0.js'></script>
-    <script type='text/javascript' src='file:///C:/Users/Ken/Desktop/Portfolio/Project5/js/ViewModel.js'></script>    
+    <script synch src='file:///C:/Users/Ken/Desktop/Portfolio/Project5/js/jquery-2.1.3.min.js'></script>
+    <script asynch src='file:///C:/Users/Ken/Desktop/Portfolio/Project5/js/knockout-3.3.0.js'></script>
+    <script aynch src='file:///C:/Users/Ken/Desktop/Portfolio/Project5/js/ViewModel.js'></script>    
 </body>
 
 </html>
