--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">        
     <title>Summit High Country</title>
 
-    <script aynch src="http://maps.googleapis.com/maps/api/js"></script>
-    <base href="http://maps.gstatic.com/mapfiles/openhand_8_8.cur" target="_parent" >
-</head>
+    <script asynch src="http://maps.googleapis.com/maps/api/js"></script>
+<!--     <base href="http://maps.gstatic.com/mapfiles/openhand_8_8.cur" target="_parent" >
+ --></head>
 
 <body>
 
@@ -20,13 +20,13 @@
                 <input class="search" type="search" placeholder="Search/Filter..." data-bind="value: query, valueUpdate: 'afterkeydown'">
             </span>
             <span>
-                <button><img src="C:/Users/Ken/Desktop/Portfolio/Project5/icons/ski.svg" alt="Ski Resorts" onclick = "filterActivity('ski')"></button> 
+                <button><img src="icons/ski.svg" alt="Ski Resorts" onclick = "filterActivity('ski')"></button> 
             </span>
             <span>
-                <button><img src="C:/Users/Ken/Desktop/Portfolio/Project5/icons/bar.svg" alt="Taverns" onclick = "filterActivity('bar')"></button> 
+                <button><img src="icons/bar.svg" alt="Taverns" onclick = "filterActivity('bar')"></button> 
             </span>
             <span>
-                <button><img src="C:/Users/Ken/Desktop/Portfolio/Project5/icons/dispensary.svg" alt="Cannabis Dispensaries" onclick = "filterActivity('dispensary')"></button> 
+                <button><img src="icons/dispensary.svg" alt="Cannabis Dispensaries" onclick = "filterActivity('dispensary')"></button> 
             </span>
         </div>
     </header>
@@ -38,7 +38,11 @@
                 <li data-bind="text: title, click: selectItem, css: {'selected': highlight()}">
                 </li>
             </ul>
-        </div>
+<!--             <ul style="list-style-type: none; padding-left:15px; margin:0px" data-bind= "foreach: activityArray">
+                <li data-bind= "text: $data">
+                </li>
+            </ul>
+ -->        </div>
 <!--         <dialog>
             <p>This is da dialog!</p>
             <button id="Close">Close</button>
@@ -51,9 +55,9 @@
         </div>
     </div>
 
-    <script synch src='file:///C:/Users/Ken/Desktop/Portfolio/Project5/js/jquery-2.1.3.min.js'></script>
-    <script asynch src='file:///C:/Users/Ken/Desktop/Portfolio/Project5/js/knockout-3.3.0.js'></script>
-    <script aynch src='file:///C:/Users/Ken/Desktop/Portfolio/Project5/js/ViewModel.js'></script>    
+    <script synch src='js/jquery-2.1.3.min.js'></script>
+    <script asynch src='js/knockout-3.3.0.js'></script>
+    <script aynch src='js/ViewModel.js'></script>    
 </body>
 
 </html>
