Got activity buttons working and added a button to show entire list
 Changes to be committed:
	new file:   icons/all.svg
	modified:   index.html
	modified:   js/ViewModel.js

--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
             <span>
                 <button><img src="icons/dispensary.svg" alt="Cannabis Dispensaries" onclick = "filterActivity('dispensary')"></button> 
             </span>
-        </div>
+             <span>
+                <button><img src="icons/all.svg" alt="Cannabis Dispensaries" onclick = "filterActivity('all')"></button> 
+            </span>
+       </div>
     </header>
 
     <div style="width: 100%; min-height: 100%; position: absolute">
