Final Submission to Correct Additional Reviewer Comments
 Changes to be committed:
	modified:   index.html
	new file:   js/knockout-3.3.0.min.js

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">        
     <title>Summit High Country</title>
-    <script asynch src="http://maps.googleapis.com/maps/api/js"></script>
+    <script src="http://maps.googleapis.com/maps/api/js"></script>
 </head>
 
 <body>
@@ -27,7 +27,7 @@
             <span>
                 <button><img src="icons/dispensary.svg" alt="Cannabis Dispensaries" onclick = "filterActivity('dispensary')"></button> 
             </span>
-             <span>
+            <span>
                 <button><img src="icons/all.svg" alt="Cannabis Dispensaries" onclick = "filterActivity('all')"></button> 
             </span>
        </div>
@@ -52,11 +52,11 @@
         <h1>Please Verify Selection and Try Again</h1>
     </div>
 
-    <script synch src='js/jquery-2.1.3.min.js'></script>
-    <script asynch src='js/knockout-3.3.0.js'></script>
-    <script asynch src='js/bootstrap.min.js'></script>
-    <script asynch src='js/bootbox.min.js'></script>
-    <script aynch src='js/ViewModel.js'></script> 
+    <script async src='js/jquery-2.1.3.min.js'></script>
+    <script async src='js/knockout-3.3.0.min.js'></script>
+    <script async src='js/bootstrap.min.js'></script>
+    <script async src='js/bootbox.min.js'></script>
+    <script async src='js/ViewModel.js'></script> 
 
 </body>
 
